AUS-243: CHORD: Use java entry point